<resources>
    <string name="app_name">UnitorM2</string>
    <string name="app_ver">3.2.0</string>
    <string name="per_re_title">Unitor Needs Permission</string>
    <string name="per_re_content">Unitor needs \'Write to storage (EXTERNAL_WRITE)\' permission. If you don\'t Unitor cna\'t save Unipack!</string>
    <string name="agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="unable_save">You will not be able to save UniPack.</string>
    <string name="setting">Setting</string>
    <string name="importing">Import</string>
    <string name="newPack">New Pack</string>
    <string name="alert_err">Error</string>
    <string name="alert_ok">ok</string>
    <string name="asynk_delete_title">Deleting \n%s\n...</string>
    <string name="alert_message_dunipack">Are you sure delete \'%s\'?</string>
    <string name="alert_title_dunipack">Delete \'%s\'</string>
    <string name="alert_button_dok">delete</string>
    <string name="alert_button_dcancel">cancel</string>
    <string name="pref_category_app">App Setting</string>
    <string name="pref_app_lockon">Turn on display while editing</string>
    <string name="pref_app_lockonOk">Enable</string>
    <string name="pref_app_lockonNo">Disable</string>
    <string name="toast_back">If you want to go back, press \'Back button\' one more.</string>
    <string name="dialog_Make">make</string>
    <string name="dialog_title_newUnipack">Making new Unipack</string>
    <string name="toast_newUnipack_null">Please fill in all blanks</string>
    <string name="button_selectAll">Select All</string>
    <string name="dialog_title_unipack">Please select a Unipack. (.zip)</string>
    <string name="dialog_title_file">Please select sounds. (.mp3 or .wav)</string>
    <string name="async_unzip_title">Unzipping...</string>
    <string name="async_unzip_message">Unzipping \'%s\'...</string>
    <string name="dialog_unzip_sucT">Unzip \'%s\' Succeed</string>
    <string name="dialog_unzip_sucM">Unzip \'%s\' was successful.</string>
    <string name="dialog_unzip_failT">Unzip \'%s\' Failed</string>
    <string name="dialog_unzip_failM">Unzip \'%s\' was Failed.</string>
    <string name="fragment_button_save">Save</string>
    <string name="toast_save_succeed">Save Succeed</string>
    <string name="toast_save_fail">Save Failed</string>
    <string name="text_add_sound">Add Sounds</string>
    <string name="radio_mode_add">Edit</string>
    <string name="radio_mode_test">Test</string>
    <string name="button_file_select">Add</string>
    <string name="text_file_longClick">If you do \'Long Click\', you can play Sound</string>
    <string name="async_copy_sound_title">Copying Sound Files..</string>
    <string name="async_copy_sound_finish">Finish copy all sound files.</string>
    <string name="btn_add_LED">Add New LED</string>
    <string name="text_current">Location : \'%s\'</string>
    <string name="btn_add">Add</string>
    <string name="check_LED_off">LED OFF</string>
    <string name="check_delete_LED">Delete LED</string>
    <string name="button_edit_another">Edit Another</string>
    <string name="save">Save</string>
    <string name="text_nochain">Please set \'Chain\' in Info tab</string>
    <string name="menu_sound_select">Select</string>
    <string name="menu_sound_delete">Delete</string>
    <string name="menu_sound_play">Play</string>
    <string name="async_load_sound_title">Loading Sounds..</string>
    <string name="spinner_chain">%s chain</string>
    <string name="checkbox_delete_sound">Delete Sound</string>
    <string name="saveall">Save All</string>
    <string name="save_info">Save Info</string>
    <string name="save_keySound">Save keySound</string>
    <string name="save_KeyLED">Save keyLED</string>
    <string name="alert_recover">Restore \'%s\'</string>
    <string name="alert_die_M">\'%s\' was not saved before. Do you want to restore it?</string>
    <string name="alert_die_OK">Restore</string>
    <string name="alert_die_NO">No</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>