<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="5dp">

    <LinearLayout
        android:id="@+id/Layout_KeyLeft"
        android:layout_width="match_parent"
        android:layout_marginRight="5dp"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/Layout_Btns"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/text_add_sound"
            android:id="@+id/Button_AddSound"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:id="@+id/Text_current_sound"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/List_KeySound"
            android:layout_marginBottom="3dp"></ListView>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:checkedButton="@id/Radio_Edit"
            android:id="@+id/RadioG_mode">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_mode_add"
                android:id="@+id/Radio_Edit"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_mode_test"
                android:id="@+id/Radio_Test"/>

        </RadioGroup>

    </LinearLayout>

    <include
        layout="@layout/view_area_buttons"
        android:layout_height="match_parent"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/Layout_Btns"/>


    <RelativeLayout
        android:id="@+id/Layout_KeyRight"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/Layout_Btns">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/Layout_Edit">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Spinner_chain"
                android:layout_marginBottom="3dp"></Spinner>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Check_deleteSound"
                android:text="@string/checkbox_delete_sound"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_content"
                android:scrollbars="vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Layout_Play"
            android:orientation="vertical"
            android:visibility="invisible">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/RadioG_chain_S"></RadioGroup>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>