<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:padding="5dp">

    <RelativeLayout
        android:id="@+id/Layout_KeyLeft"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/Layout_Btns">

        <LinearLayout
            android:id="@+id/Layout_Main_LED"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/Btn_NewLED"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_add_LED"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Text_current_LED"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/list_LED"
                android:layout_weight="1"></ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:id="@+id/Layout_editpannal"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_add" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="false"
                    android:background="@null"
                    android:textSize="15dp"
                    android:textStyle="normal"/>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/list_sound_content"></ListView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/Btn_Play"
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_drop_down_circle_white_24dp"
                    android:background="#00FFFFFF"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right">

                    <ImageButton
                        android:id="@+id/LED_mode_switch"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_remove_red_eye_white_18dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/Layout_Btns"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <include
            layout="@layout/view_area_play"
            android:layout_height="match_parent"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/Btns"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_KeyRight"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/Layout_Btns"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ScrollView
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/KeySound_Right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/RadioG_chain"></RadioGroup>

            </RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="3dp">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Spinner_color"></Spinner>

            <CheckBox
                android:id="@+id/check_LED_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/check_LED_off"/>

            <CheckBox
                android:id="@+id/check_delete_LED"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/check_delete_LED"/>

            <TextView
                android:id="@+id/content_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_edit_another"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="@color/colorAccent"
                android:background="#00FFFFFF"
                android:text="@string/button_edit_another"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_alignParentRight="true"
                android:text="@string/save"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
